hphp/test/zend/good/ext/openssl/tests/bug41033.php.skipif
<?php 
if (!extension_loaded("openssl")) die("skip, openssl required");
if (OPENSSL_VERSION_NUMBER < 0x009070af) die("skip");
?>