hphp/test/zend/bad/ext/libxml/tests/bug54440.php.skipif
<?php if (!extension_loaded('simplexml')) die('skip simplexml required for this test'); ?>